--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,15 @@
         }
     ],
     "require": {
+        "dnoegel/php-xdg-base-dir": "^0.1.0",
+        "webmozart/path-util": "^2.3"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.10.5",
         "phpunit/phpunit": "^7.4",
-        "friendsofphp/php-cs-fixer": "^2.13"
+        "friendsofphp/php-cs-fixer": "^2.13",
+        "phpactor/test-utils": "^1.0",
+        "phpbench/phpbench": "^0.14.0"
     },
     "autoload": {
         "psr-4": {
