--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "phpunit/phpunit": "^7.4",
         "friendsofphp/php-cs-fixer": "^2.13",
         "phpactor/test-utils": "^1.0",
-        "phpbench/phpbench": "^0.14.0"
+        "phpbench/phpbench": "^0.14.0",
+        "symfony/yaml": "^4.2"
     },
     "autoload": {
         "psr-4": {
