--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,9 @@
             "Phpactor\\ConfigLoader\\Tests\\": "tests/"
         }
     },
-    "branch-alias": {
-        "dev-master": "1.0.x-dev"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
