--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.10.5",
-        "phpunit/phpunit": "^7.4",
-        "friendsofphp/php-cs-fixer": "^2.13",
+        "phpstan/phpstan": "~0.11.0",
+        "phpunit/phpunit": "~7.0",
+        "friendsofphp/php-cs-fixer": "~2.15.0",
         "phpactor/test-utils": "^1.0",
         "phpbench/phpbench": "^0.14.0",
         "symfony/yaml": "^4.2"
