--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,2 +1,9 @@
+includes:
+    - vendor/phpstan/phpstan/conf/config.level7.neon
+
 parameters:
-    paths: [ lib ]
+    ignoreErrors:
+        
+    paths:
+        - lib
+
