--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ includes:
     - vendor/phpstan/phpstan/conf/config.level7.neon
 
 parameters:
+    inferPrivatePropertyTypeFromConstructor: true
     ignoreErrors:
         
     paths:
