--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require-dev": {
         "phpstan/phpstan": "~0.12.0",
-        "phpunit/phpunit": "~7.0",
+        "phpunit/phpunit": "^9.0",
         "friendsofphp/php-cs-fixer": "~2.15.0",
         "phpactor/test-utils": "^1.0",
         "phpbench/phpbench": "^0.14.0",
