--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,18 @@
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-        "phpstan/phpstan": "~0.12.0",
-        "phpunit/phpunit": "~7.0",
-        "friendsofphp/php-cs-fixer": "~2.15.0",
+        "ergebnis/composer-normalize": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.17",
         "phpactor/test-utils": "^1.0",
         "phpbench/phpbench": "^0.14.0",
+        "phpstan/phpstan": "~0.12.0",
+        "phpunit/phpunit": "~7.0",
         "symfony/yaml": "^4.2"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     },
     "autoload": {
         "psr-4": {
@@ -30,9 +36,6 @@
             "Phpactor\\ConfigLoader\\Tests\\": "tests/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
-    }
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
