--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
         "phpactor/test-utils": "^1.0",
         "phpbench/phpbench": "^0.14.0",
         "phpstan/phpstan": "~0.12.0",
-        "phpunit/phpunit": "~7.0",
-        "symfony/yaml": "^4.2"
+        "phpunit/phpunit": "^9.0",
+        "symfony/yaml": "^4.2",
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "extra": {
         "branch-alias": {
