--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "ergebnis/composer-normalize": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.17",
         "phpactor/test-utils": "^1.0",
-        "phpbench/phpbench": "^0.14.0",
+        "phpbench/phpbench": "^1.0.0-alpha3",
         "phpstan/phpstan": "~0.12.0",
         "phpunit/phpunit": "^9.0",
         "symfony/yaml": "^4.2",
